--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ documentation = "https://docs.rs/deno_ast"
 edition = "2021"
 homepage = "https://deno.land/"
 license = "MIT"
-repository = "https://github.com/denoland/deno_ast"
+repository = "https://github.com/unyt-org/deno_ast"
 description = "Source text parsing, lexing, and AST related functionality for Deno"
 
 [package.metadata.docs.rs]
