--- a/Cargo.toml
+++ b/Cargo.toml
@@ -79,6 +79,7 @@ swc_visit_macros = { version = "=0.5.13", optional = true }
 sourcemap = { version = "9.0.0", optional = true }
 string_capacity = "0.1.4"
 thiserror = "2"
+sha256 = "1.6.0"
 
 [dev-dependencies]
 pretty_assertions = "1.3.0"
